<resources>
    <string name="app_name">神盾智助</string>
    <string name="short_cut_name">网约住宿</string>
    <string name="title_home">入住订单</string>
    <string name="title_room">房间</string>
    <string name="title_order">订单</string>
    <string name="title_me">我的</string>
    <string name="title_network">网络</string>
    <string name="title_smartlife">智生活</string>
    <string name="title_mall">商城</string>
    <string name="login_please_input_phone_num">请输入手机号</string>
    <string name="login_please_input_pwd">请输入密码</string>
    <string name="login_right_now">立即登录</string>
    <string name="login_by_account_and_password">密码登录</string>
    <string name="login_phone_error">请输入正确格式的手机号</string>
    <string name="login_pwd_hint">请输入6&#8211;20位密码</string>
    <string name="main_tab_name_rooms">房间</string>
    <string name="main_tab_name_orders">订单</string>
    <string name="main_tab_name_my">我的</string>
    <string name="main_tab_name_explore">发现</string>
    <string name="tab_style_room">房型</string>
    <string name="tab_all_room">全部房型</string>
    <string name="tab_large_room">大床房</string>
    <string name="tab_cheap_room">特价房</string>
    <string name="tab_expensive_room">豪华套房</string>
    <string name="tab_single_room">单人房</string>
    <string name="tab_beauty_room">景观房</string>
    <string name="event_status_end">活动结束</string>
    <string name="event_status_ing">正在报名</string>
    <string name="event_status_sing_up">截止报名</string>
    <string name="event_type_osc">源创会</string>
    <string name="event_type_tec">技术交流</string>
    <string name="event_type_other">其他</string>
    <string name="event_type_outside">站外活动</string>
    <string name="event_type_outline">线下活动</string>
    <string name="event_apply_status_un_sign">我要报名</string>
    <string name="event_apply_status_audit">审核中</string>
    <string name="event_sign_info">我的报名信息</string>
    <string name="event_apply_status_confirmed">已确认</string>
    <string name="event_apply_status_presented">查看活动出席人</string>
    <string name="event_apply_status_canceled">已取消</string>
    <string name="event_apply_status_refused">已拒绝</string>
    <string name="event_is_fav">已收藏</string>
    <string name="event_un_fav">收藏</string>
    <string name="loading">加载中…</string>
    <string name="loading_no_more">已加载全部</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_loading_friend">数据初始化中…</string>
    <string name="error_view_loading_local_friend">获取附近的程序员中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="unlogin_tip">您还未登录\r\n或网络延迟</string>
    <string name="login">登录</string>
    <string name="tip_no_internet">当前没有可用的网络链接</string>
    <string name="actionbar_title_question">帖子详情</string>
    <string name="actionbar_title_detail">详情</string>
    <string name="share_to">分享</string>
    <string name="platform_sina">微博</string>
    <string name="platform_wechat_circle">朋友圈</string>
    <string name="platform_wechat">微信</string>
    <string name="platform_qq">QQ</string>
    <string name="platform_tweet">动弹</string>
    <string name="platform_browser">浏览器</string>
    <string name="platform_copy_link">复制链接</string>
    <string name="platform_picture">长图分享</string>
    <string name="platform_more_option">更多</string>
    <string name="platform_download">保存图片</string>
    <string name="platform_preview">预览</string>
    <string name="share_title">房东助手分享</string>
    <string name="commit">提交修改</string>
    <string name="submit">提交</string>
    <string name="add_favorite_success">收藏成功</string>
    <string name="add_favorite_faile">收藏失败</string>
    <string name="del_favorite_success">已取消收藏</string>
    <string name="del_favorite_faile">取消收藏失败</string>
    <string name="actionbar_title_question_tag">%s相关</string>
    <string name="comment_empty">暂无评论</string>
    <string name="comment_reply_count">---共有%s条回复---</string>
    <string name="tip_comment_content_empty">评论内容不能为空</string>
    <string name="comment_publish_faile">评论失败</string>
    <string name="progress_submit">正在提交…</string>
    <string name="tweet_public">发布动弹</string>
    <string name="tweet_hint">今天你动弹了吗？</string>
    <string name="tweet_publish_title">发布动弹</string>
    <string name="tweet_publishing">正在发布动弹…</string>
    <string name="tweet_ignore_hint">该条动弹已被忽略</string>
    <string name="tweet_publish_failed_hint">动弹发布失败,请重试!!!</string>
    <string name="tweet_retry_publishing_hint">正在重新发布动弹中…</string>
    <string name="tweet_publishing_toast">正在发布动弹, 请留意通知栏。</string>
    <string name="tweet_publish_success">动弹发布成功~</string>
    <string name="tweet_publish_failed">动弹发布失败, 点击重新发送!</string>
    <string name="tweet_image_wait">准备图片中…</string>
    <string name="tweet_image_wait_failed">图片转存失败!</string>
    <string name="tweet_image_publishing" formatted="false">发布图片中…%s</string>
    <string name="tweet_image_publish_failed" formatted="false">发布图片失败-[%s/%s]</string>
    <string name="tweet_detail_data_null">啊噢, 没有找到该动弹~ 可能被主人删除了呢!</string>
    <string name="record_sound_not_found">找不到录音</string>
    <string name="ok">确定</string>
    <string name="add">添加</string>
    <string name="tip_content_empty">内容不能为空</string>
    <string name="tip_content_too_long">内容太长</string>
    <string name="zb">开源众包</string>
    <string name="git">码云推荐</string>
    <string name="gits">代码片段</string>
    <string name="actionbar_title_software_list">开源软件</string>
    <string name="actionbar_title_user_blog">用户博客列表</string>
    <string name="actionbar_title_my_information">我的资料</string>
    <string name="actionbar_title_setting">设置</string>
    <string name="actionbar_title_about_osc">关于房东助手</string>
    <string name="actionbar_title_note">便签</string>
    <string name="actionbar_title_note_edit">编辑便签</string>
    <string name="actionbar_title_event">我的活动</string>
    <string name="actionbar_title_tags">关注标签</string>
    <string name="actionbar_title_my_event">我的活动</string>
    <string name="actionbar_title_event_apply">活动出席人员</string>
    <string name="actionbar_title_same_city">同城</string>
    <string name="favorite">收藏</string>
    <string name="following">关注</string>
    <string name="follow_done">已关注</string>
    <string name="follower">粉丝</string>
    <string name="join_time">加入于 :</string>
    <string name="location">所在地区:</string>
    <string name="development_platform">开发平台:</string>
    <string name="academic_focus">专长领域:</string>
    <string name="from_mobile">手机</string>
    <string name="from_android">Android</string>
    <string name="from_iphone">iPhone</string>
    <string name="from_windows_phone">Windows Phone</string>
    <string name="from_wechat">微信</string>
    <string name="qr_scan_tips">将二维码/条码放入框内，即可自动扫描</string>
    <string name="actionbar_title_qr_scan">二维码/条码</string>
    <string name="send_message_to">发送私信给:</string>
    <string name="send_to">发给</string>
    <string name="message_count">%s条私信</string>
    <string name="enter">确定</string>
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="delete_all">删除所有</string>
    <string name="transmit">转发</string>
    <string name="copy_success">复制成功</string>
    <string name="deleting">正在删除…</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failed">删除失败</string>
    <string name="soft_detail_doc">软件文档</string>
    <string name="soft_detail_index">软件官网</string>
    <string name="soft_detail_author">软件作者:</string>
    <string name="soft_detail_license">开源协议:</string>
    <string name="soft_detail_language">开发语言:</string>
    <string name="soft_detail_platform">操作系统:</string>
    <string name="soft_detail_pub_time">收录时间:</string>
    <string name="soft_detail_any_name">匿名</string>
    <string name="soft_detail_no_license">无</string>
    <string name="footer_type_loading">正在加载中…</string>
    <string name="footer_type_error">加载失败</string>
    <string name="footer_type_net_error">网络错误</string>
    <string name="footer_type_not_more">没有更多数据</string>
    <string name="software_about_hint">相关软件</string>
    <string name="you_have_unread_messages">你有%s条未读消息</string>
    <string name="mention_count">\@我[%s] </string>
    <string name="letter_count">私信[%s] </string>
    <string name="review_count">评论[%s] </string>
    <string name="fans_count">新粉丝[%s] </string>
    <string name="like_count">收到赞[%s] </string>
    <string name="blog">我的博客</string>
    <string name="message">我的消息</string>
    <string name="data">我的资料</string>
    <string name="read">阅读记录</string>
    <string name="team">我的团队</string>
    <string name="user_score">积分</string>
    <string name="question">我的问答</string>
    <string name="scan">扫一扫</string>
    <string name="shake">摇一摇</string>
    <string name="add_notebook">新建便签</string>
    <string name="submit_notebook">保存便签</string>
    <string name="loading_img">加载图片</string>
    <string name="clean_cache">清理缓存</string>
    <string name="double_click_exit">双击退出</string>
    <string name="loading_more">自动加载\"更多\"</string>
    <string name="update">检查更新</string>
    <string name="about" translatable="false">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="setting_cancel">注销</string>
    <string name="logout_success_hint">注销成功</string>
    <string name="grade">去评分</string>
    <string name="osc_site">官网</string>
    <string name="know_more">了解更多</string>
    <string name="git_app">Git客户端</string>
    <string name="copyright">© 2017 OSChina.net All rights reserved.</string>
    <string name="tip_save_image_suc">图片已保存(手机相册-> osc_img)</string>
    <string name="qr_code_tip">扫一扫上面的二维码，加我为好友</string>
    <string name="qr_code_tip2">(长按保存到本地)</string>
    <string name="report">举报</string>
    <string name="report_link">链接地址</string>
    <string name="report_reason">举报原因</string>
    <string name="hint_report_desc">其他原因</string>
    <string name="tip_report_success">举报成功</string>
    <string name="tip_report_failed">举报失败</string>
    <string name="tip_double_click_exit">再次点击退出神盾智汇助</string>
    <string name="team_dynamic">团队动态</string>
    <string name="actionbar_dynamic_detail">动态内容</string>
    <string name="str_team_user_info">用户主页</string>
    <string name="str_team_my_issue">我的任务</string>
    <string name="actionbar_title_select_friends">选择&#064;好友</string>
    <string name="select_friends_search">搜索</string>
    <string name="select_friends_no_result">无结果</string>
    <string name="select_friends_empty">暂无好友</string>
    <string name="select_friends_max_tips">最多只能选%1$d个好友哦</string>
    <string name="str_request_camera_message">请求获取相机权限</string>
    <string name="permissions_camera_error">相机无法完成初始化,请正确授权。</string>
    <string name="state_network_error">网络错误</string>
    <string name="state_loading">正在加载…</string>
    <string name="state_not_more">没有更多数据</string>
    <string name="state_load_error">加载失败</string>
    <string name="state_refreshing">正在刷新</string>
    <string name="state_load">正在加载…</string>
    <string name="state_loading_error">数据加载中&#8230;</string>
    <string name="state_submit">正在提交中&#8230;</string>
    <string name="label_about_title">相关文章</string>
    <string name="vote_up">顶</string>
    <string name="vote_down">踩</string>
    <string name="gallery_save_file_not_have_external_storage_permission">没有外部存储权限!</string>
    <string name="gallery_save_file_not_have_external_storage">没有外部存储!</string>
    <string name="gallery_save_file_success">保存成功!</string>
    <string name="gallery_save_file_failed">存储失败!</string>
    <string name="image_select_opt_done">完成</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="reset_pwd">更新密码</string>
    <string name="reset_shendun_pwd">获取密码</string>
    <string name="modify">修改</string>
    <string name="cohabitant">同住人</string>
</resources>